Mobile CSS fixes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <section class="section section--primary-light section--hero">
         <div class="container">
           <div class="row">
-            <div class="col-6">
+            <div class="col-md-6">
               <div class="section__content">
                 <h1 class="section__title" data-background="Samantha-online.nl">
                   I'm Samantha<br/>
@@ -93,7 +93,7 @@
                 <a href="#about-me" class="btn btn-primary">Read more</a>
               </div>
             </div>
-            <div class="col-5">
+            <div class="col-md-5">
               <picture class="section__image">
                 <source media="(max-width: 767px)" srcset="dist/img/samantha-header@0,5x.png" />
                 <source media="(min-width: 768px)" srcset="dist/img/samantha-header.png" />
@@ -108,7 +108,7 @@
         <h2 class="section__title" data-background="About me">About me</h2>
         <div class="container">
           <div class="row">
-            <div class="col-10">
+            <div class="col-md-10">
               <div class="block-border block-border--left">
                 <div class="block-border__content">
                   <dl class="description-list row">
@@ -210,7 +210,7 @@
         <h2 class="section__title" data-background="Services">Services</h2>
         <div class="container">
           <div class="row">
-            <div class="col">
+            <div class="col-sm-6 col-lg">
               <article class="block block--light">
                 <i class="block__icon fal fa-desktop-alt"></i>
                 <h3 class="block__title">Web Design</h3>
@@ -220,7 +220,7 @@
               </article>
             </div>
 
-            <div class="col">
+            <div class="col-sm-6 col-lg">
               <article class="block block--light">
                 <i class="block__icon fal fa-laptop-code"></i>
                 <h3 class="block__title">Web Development</h3>
@@ -230,7 +230,7 @@
               </article>
             </div>
 
-            <div class="col">
+            <div class="col-lg">
               <article class="block block--light">
                 <i class="block__icon fal fa-phone-laptop"></i>
                 <h3 class="block__title">Fully Responsive</h3>
@@ -240,7 +240,7 @@
               </article>
             </div>
 
-            <div class="col">
+            <div class="col-sm-6 col-lg">
               <article class="block block--light">
                 <i class="block__icon fal fa-code"></i>
                 <h3 class="block__title">Clean Code</h3>
@@ -250,7 +250,7 @@
               </article>
             </div>
 
-            <div class="col">
+            <div class="col-sm-6 col-lg">
               <article class="block block--light">
                 <i class="block__icon fal fa-users"></i>
                 <h3 class="block__title">Scrum Master</h3>
@@ -376,7 +376,7 @@
         <h2 class="section__title" data-background="Education & certificates">Education & certificates</h2>
         <div class="container">
           <div class="row">
-            <div class="col-10">
+            <div class="col-md-10">
               <div class="block-border block-border--right">
                 <div class="block-border__content">
                   <ul class="timeline timeline--single">
@@ -568,7 +568,6 @@
         </div>
 
         <nav class="footer__nav nav">
-          <a href="privacy-policy.html" class="nav-link">Privacy policy</a>
           <a href="https://tipsopreis.nl" class="nav-link" target="_blank">TipsOpReis.nl</a>
         </nav>
       
