--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link href="dist/css/style.css" rel="stylesheet">
 
     <title>Samantha-online.nl</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-77217607-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-77217607-1');
+    </script>
   </head>
 
   <body>
