Added CodePen link

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
                   <i class="fab fa-github"></i>
                 </a>
               </li>
+              <li class="nav-item">
+                <a href="https://codepen.io/samanthabrouwer" class="nav-link" target="_blank">
+                  <span class="sr-only">CodePen</span>
+                  <i class="fab fa-codepen"></i>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -593,6 +599,10 @@
           <a href="https://github.com/samanthabrouwer" class="nav-link" target="_blank">
             <span class="sr-only">Github</span>
             <i class="fab fa-github"></i>
+          </a>
+          <a href="https://codepen.io/samanthabrouwer" class="nav-link" target="_blank">
+            <span class="sr-only">CodePen</span>
+            <i class="fab fa-codepen"></i>
           </a>
         </nav>
       </div>
